Geometry Nodes: Instances to points doesn't generate any points #93256

Closed
opened 2021-11-21 03:45:15 +01:00 by RoyTheKoi · 6 comments

System Information
Operating system: MacOS Big Sur 11.2.3
Graphics card: AMD Radeon Pro 5500M 8 GB, Intel UHD Graphics 630 1536 MB

Blender Version
Broken: 3.1 Alpha, 15ecd47b96 master, 2020-11-20
Worked: 3.0 Beta, bd734cc441 master 2020-11-11

Short description of error
The instances to points node fails to generate any points.

3.0 Beta, working: Instances_to_points_3-0.png
3.1 Alpha, broken: Instances_to_points_3-1.png

Exact steps for others to reproduce the error
Instances_to_points_bug.blend
Test the attached blend file, or:

  1. Add a geometry nodes modifier to the default cube
  2. Add an Instance on Points node and connect the group's incoming geometry to both the "Points" and "Instances" inputs.
  3. Insert an instances to Points node between the previous node, and the group output node. No points are created.
**System Information** Operating system: MacOS Big Sur 11.2.3 Graphics card: AMD Radeon Pro 5500M 8 GB, Intel UHD Graphics 630 1536 MB **Blender Version** Broken: 3.1 Alpha, 15ecd47b9685 master, 2020-11-20 Worked: 3.0 Beta, bd734cc4419a master 2020-11-11 **Short description of error** The instances to points node fails to generate any points. 3.0 Beta, working: ![Instances_to_points_3-0.png](https://archive.blender.org/developer/F11835244/Instances_to_points_3-0.png) 3.1 Alpha, broken: ![Instances_to_points_3-1.png](https://archive.blender.org/developer/F11835246/Instances_to_points_3-1.png) **Exact steps for others to reproduce the error** [Instances_to_points_bug.blend](https://archive.blender.org/developer/F11835270/Instances_to_points_bug.blend) Test the attached blend file, or: 1. Add a geometry nodes modifier to the default cube 2. Add an Instance on Points node and connect the group's incoming geometry to both the "Points" and "Instances" inputs. 3. Insert an instances to Points node between the previous node, and the group output node. No points are created.
Author

Added subscriber: @RoyTheKoi

Added subscriber: @RoyTheKoi
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Hi, thanks for the report. I can reproduce on master: d455eadcd82f2151e858025cae6788b65016811e
Will bisect.

Hi, thanks for the report. I can reproduce on master: `d455eadcd82f2151e858025cae6788b65016811e` Will bisect.

This issue was referenced by fb470c256a

This issue was referenced by fb470c256aac5dc8834cf113ca1f2beab373b8da
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Hans Goudey self-assigned this 2021-11-21 17:38:04 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#93256
No description provided.