Fix T93256: Instances to points node broken after recent commit

When 97533eede444217 added the instance domain, it didn't change
the domain that instance attributes are read from in this node.